tests/fixtures/invalid/pow_str_none_bytes.py
# Cannot call pow() with Str, None, Bytes
x = pow("hello", None, b"hello")
